# FEM

./: CMakeLists.txt  Doxyfile
src/: 2dSquare.cpp  Assembly.h  BoundaryConditions.cpp  BoundaryConditions.h  CustomMesh.h  Discretization.cpp  ElasticMaterial.cpp  ElasticMaterial.h  Element.cpp  Element.h  Force.h  Function.h  GaussIntegration.cpp  IDiscretization.h  IMaterial.h  ImplAssembly.cpp  ImplAssembly.h  Matrix.h  MechanicalBoundaryConditions.cpp  Mesh.cpp  Mesh.h  NaiveMesh.h  Node.h  PlaneStrain.cpp  PlaneStress.cpp  PlaneStress.h  Quad2.cpp  Quad2.h  Vector.cpp  Vector.h  plot_test.cpp  vector_test.cpp  vonMisesTest.cpp
src/algebra/: IMatrix.h  Matrix.h  Vector.h
src/elements/: Element.cpp  Element.h  Node.cpp  Node.h  Quad2.cpp  Quad2.h
src/examples/: VonMisesSquare.cpp  arcLengthTest.cpp  meshSets.cpp  nonLinear.cpp
src/fem/: Discretization.h  GaussIntegration.cpp  GaussIntegration.h  IDiscretization.h  ImplAssembly.cpp  ImplAssembly.h  TestFunction.h
src/materials/: ElasticMaterial.cpp  ElasticMaterial.h  ElastoPlasticMaterial.cpp  ElastoPlasticMaterial.h  IMaterial.h  Material.cpp  Material.h  PlaneStrain.cpp  PlaneStrain.h  PlaneStress.cpp  PlaneStress.h  PlasticMaterial.h  VonMises.cpp  VonMises.h  VonMisesPlaneStrain.cpp  VonMisesPlaneStrain.h  VonMisesPlaneStress.cpp  VonMisesPlaneStress.h
src/meshing/: CustomMesh.cpp  CustomMesh.h  Mesh.cpp  Mesh.h  NaiveMesh.cpp  NaiveMesh.h
src/physics/: BoundaryConditions.h  Force.cpp  Force.h  MechanicalBoundaryConditions.h
src/plotter/: Plotter.cpp  Plotter.h  gnuplot_i.cpp  gnuplot_i.hpp
src/solver/: ArcLength.cpp  ArcLength.h  IterativeLinearSolver.cpp  IterativeLinearSolver.h  Jacobi.cpp  Jacobi.h  LSolver.cpp  LSolver.h  LinearIteration.cpp  LinearIteration.h  LinearIterativeSolver.cpp  LinearIterativeSolver.h  LinearIterator.h  NLSolver.cpp  NLSolver.h  NLSolverBiCGStab.cpp  NLSolverBiCGStab.h  NLSolverCG.cpp  NLSolverCG.h  Solver.cpp  Solver.h
src/solver/descent/: BiCGStab.cpp  BiCGStab.h  ConjugateGradientDescent.cpp  ConjugateGradientDescent.h  DescentMethod.cpp  DescentMethod.h  GradientDescent.cpp  GradientDescent.h
src/tensors/: Strain.cpp  Strain.h  Stress.cpp  Stress.h  Tensor.cpp  Tensor.h
